--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .tableContainer {
   margin:auto;
   width: 95%;
